--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             </div>
         </div>
     </div>
-
+<div class="small-cursor"></div>
+<div class="large-cursor"></div>
 </body>
 <script src="app.js"></script>
 
